--- a/class/students.css
+++ b/class/students.css
@@ -30,8 +30,7 @@ html {
 body {
     padding: 0px;
     margin: 0px;
-    font-family: Tahoma, sans-serif;
-    font-size: 30px;
+    font-family: Tahoma, serif;
     color: white;
     background-color: #111;
 }
@@ -51,6 +50,10 @@ div {
     margin-right: auto;
 }
 
+p {
+    font-size: 22px;
+}
+
 a:link, a:visited, a:hover, a:active {
     color: white;
     text-decoration: none; 
@@ -63,12 +66,12 @@ a:link, a:visited, a:hover, a:active {
 
 *::-webkit-scrollbar { width: 0 !important }
 
-#archiveBanner, #pwdPop, #archivedBackupsPop, #customListPop, #studentPropertiesPop, #attArchiveListPop, #studentAttStatsPop, #attStatsPop, #openInsigniaPop, #rankChartPop, #alertsPop, #studentStatsPop, #teamListContainer, #sortChoicePop, #dataInputAlertPop, #teamsListPop, #playGamePop, #att2Pop, #att3Pop, #actionAlertPop, #advancedOptionsPop, #sameLastPop, #infoAlertPop, #addTeacherNotePop, #addStudentNotePop, #modifyTeacherNotesPop, #teacherNotesPop, #customSortListPop, #editStudentPop, #newStudentPop, #editStudentNotePop, #editTeacherNotePop, #studentNotesPop, #missionsPop, #mvPtsPop, #asPtsPop, #promoPop, #backupPop, #promoListPop, #attListPop, #mainMenuPop, #drawPop, #randPop, #studentPop {
+#calendarPop, #hint, #archiveBanner, #pwdPop, #archivedBackupsPop, #customListPop, #studentPropertiesPop, #attArchiveListPop, #studentAttStatsPop, #attStatsPop, #openInsigniaPop, #rankChartPop, #alertsPop, #studentStatsPop, #teamListContainer, #sortChoicePop, #dataInputAlertPop, #teamsListPop, #playGamePop, #att2Pop, #att3Pop, #actionAlertPop, #advancedOptionsPop, #sameLastPop, #infoAlertPop, #addTeacherNotePop, #addStudentNotePop, #modifyTeacherNotesPop, #teacherNotesPop, #customSortListPop, #editStudentPop, #newStudentPop, #editStudentNotePop, #editTeacherNotePop, #studentNotesPop, #missionsPop, #mvPtsPop, #asPtsPop, #promoPop, #backupPop, #promoListPop, #attListPop, #mainMenuPop, #drawPop, #randPop, #studentPop {
     display: none;
 }
 
 .lb {
-    border: 1px solid white;
+    border: 1px solid #ddd;
     margin-bottom: 20px;
     padding-left: 10px;
 }
@@ -79,14 +82,6 @@ a:link, a:visited, a:hover, a:active {
     text-align: center !important;
 }
 
-#archiveBanner {
-    margin: 0px 20px 0px 20px;
-    padding: 0px;
-    background-color: red;
-    color: white;
-    font-size: 15px;
-}
-
 #customList, #customListAbsent { 
     text-align: left;
 }
@@ -95,19 +90,8 @@ a:link, a:visited, a:hover, a:active {
     cursor: pointer;
 }
 
-#nameList2, #nameList3 {
-    height: 160px;
-    overflow-y: auto;
-}
-
 #nameList {
-    height: 600px;
-    overflow-y: auto;
-    background-color: black;
-    border: 2px solid #222;
-    padding: 20px;
-    border-radius: 25px;
-    text-align: left;
+    margin: 30px auto;
 }
 
 #studentNotesList, #teacherNotesList {
@@ -249,7 +233,7 @@ a:link, a:visited, a:hover, a:active {
 
 .asmvHeader {
     font-size: 18px;
-    margin-top: 10px;
+    margin-top: 15px;
     padding-top: 0px;
 }
 
@@ -257,7 +241,7 @@ a:link, a:visited, a:hover, a:active {
     height: 50px;
     width: 180px;
     font-size: 15px;
-    border: 1px solid white;
+    border: 1px solid #ddd;
     border-radius: 10px;
     cursor: pointer;
 }
@@ -340,15 +324,18 @@ a:link, a:visited, a:hover, a:active {
 
 #studentPop {
     padding-bottom: 0px;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
 }
 
-#missionsPop {
+.note {
+    font-size: 15px !important;
+    color: orange;
+    text-align: center !important;
+    margin: 0px auto;
+}
+
+#studentStatsPop, #missionsPop {
     padding-top: 0px
-}
-
-#asPtsPop, #mvPtsPop {
-    padding-top: 0px;
 }
 
 #boysListAttP, #girlsListAttP, #boysArchiveListAttP, #girlsArchiveListAttP, #team1ListP, #team2ListP {
@@ -418,24 +405,10 @@ a:link, a:visited, a:hover, a:active {
     padding-top: 2px;
 }
 
-.name, .nameSmaller {
-    margin: 0px 0px 15px;
-    cursor: pointer;
-}
-
-.nameSmaller {
-    font-size: 20px;
-}
-
-.name2 {
-    margin: 10px auto;
-    font-size: 20px;
-}
-
-.name3 {
-    margin: 10px auto;
-    font-size: 20px;
-    text-align: left;
+.name {
+    margin: 0px 0px 30px;
+    color: lawngreen;
+    font-size: 30px;
 }
 
 .sortValues {
@@ -595,40 +568,6 @@ a:link, a:visited, a:hover, a:active {
     width: 375px;
 }
 
-.searchField2 {
-    width: 350px;
-    font-size: 20px;
-    border-radius: 10px;
-    border: 1px solid transparent;
-    text-align: center;
-}
-
-.textInputField2 {
-    width: 150px;
-}
-
-.textInputField3 {
-    width: 175px;
-}
-
-.textInputField4 {
-    width: 85px;
-}
-
-.textInputField5 {
-    width: 125px;
-    margin: 0px 0px 0px 0px;
-}
-
-.textInputField6 {
-    width: 200px;
-    height: 50px;
-    margin-top: 30px;
-    margin-bottom: 35px;
-    font-size: 30px;
-}
-
-
 .searchField:focus, .searchField2:focus, .textInputField2:focus, .textInputField3:focus, .textInputField4:focus, .textInputField5:focus, .textInputField6:focus, #initialNote:focus, #dataInputTextField:focus, #addStudentNote:focus, #editStudentNote:focus, #addTeacherNote:focus, #editTeacherNote:focus {
     outline: none;
     border: 2px solid dodgerblue;
@@ -679,7 +618,7 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .progressBarTable{
-    border: 1px solid white;
+    border: 1px solid #ddd;
     border-spacing: 1px;
 }
 
@@ -688,12 +627,12 @@ a:link, a:visited, a:hover, a:active {
     width: 9.5px;
 }
 
-.asmvInfoTable, #rankChartTable, #attStatsTable, #attListTable, #studentAttTable, #studentMenuTable {
+#calendarTable, .asmvInfoTable, #rankChartTable, #attStatsTable, #attListTable, #studentAttTable, #studentMenuTable {
     width: 100%
 }
 
-#studentMenuTable, #studentMenuTable td, .asmvInfoTable, .asmvInfoTable th, .asmvInfoTable td, #rankChartTable, #rankChartTable th, #rankChartTable td, #attStatsTable, #attStatsTable th, #attStatsTable td, #attListTable, #attListTable td, #studentAttTable, #studentAttTable td {
-    border: 1px solid white;
+#calendarTable, #calendarTable td, #calendarTable th, #studentMenuTable, #studentMenuTable td, .asmvInfoTable, .asmvInfoTable th, .asmvInfoTable td, #rankChartTable, #rankChartTable th, #rankChartTable td, #attStatsTable, #attStatsTable th, #attStatsTable td, #attListTable, #attListTable td, #studentAttTable, #studentAttTable td {
+    border: 1px solid #ddd;
     border-collapse: collapse;
     background-color: black;
 }
@@ -710,6 +649,7 @@ a:link, a:visited, a:hover, a:active {
 
 .tableHeaderRow td {
     background-color: #3478F6 !important;
+    height: 40px;
 }
 
 #rankChartTable th, #rankChartTable td {
@@ -751,10 +691,6 @@ a:link, a:visited, a:hover, a:active {
     background-position: center;
     background-repeat: no-repeat;
     background-color: #111;
-}
-
-#rankChartPop p {
-    font-size: 15px;
 }
 
 .scrollingContainer {
@@ -824,6 +760,7 @@ a:link, a:visited, a:hover, a:active {
 
 #mvText {
     text-align: left;
+    padding: 10px;
 }
 
 #studentPopInsignia {
@@ -855,6 +792,7 @@ a:link, a:visited, a:hover, a:active {
 
 #studentPopName {
     margin: 15px auto;
+    color: lawngreen;
 }
 
 #studentPopPts {
@@ -946,4 +884,45 @@ a:link, a:visited, a:hover, a:active {
 .contactButton2 {
     font-size: 65px;
     font-family: MobileIcons;
+}
+
+#missionsKeyTable {
+    margin: 0px auto;
+}
+
+#missionsKeyTable tr {
+    height: 15px;
+}
+
+#complete, #incomplete, #missing {
+    width: 15px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+
+#complete {
+    background-color: green;
+}
+
+#incomplete {
+    background-color: darkorange;
+}
+
+#missing {
+    background-color: black;
+}
+
+.equalSign {
+    font-size: 12px;
+    padding: 0px;
+    text-align: right;
+}
+
+.keyLabel {
+    font-size: 12px;
+    padding: 0px;
+}
+
+.keySpacer {
+    width: 20px;
 }
