--- a/class/main.css
+++ b/class/main.css
@@ -171,7 +171,7 @@ a:link, a:visited, a:hover, a:active {
 .roundButton1 {
     height: 50px;
     width: 50px;
-    border: 2px solid #eee;
+    border: 2px solid #ddd;
     background-color: black;
     border-radius: 25px;
     font-size: 25px;
@@ -256,7 +256,7 @@ a:link, a:visited, a:hover, a:active {
     height: 50px;
     width: 180px;
     font-size: 15px;
-    border: 1px solid white;
+    border: 1px solid #ddd;
     border-radius: 10px;
     cursor: pointer;
 }
@@ -296,7 +296,7 @@ a:link, a:visited, a:hover, a:active {
     border-radius: 25px;
     height: 80px;
     width: 80px;
-    border: 1px solid white;
+    border: 1px solid #ddd;
     background-color: black;
     padding-top: 7px;
     font-size: 60px;
@@ -311,7 +311,7 @@ a:link, a:visited, a:hover, a:active {
     padding-top: 13px;
     line-height: 1;
     margin: 10px;
-    border: 2px solid white;
+    border: 2px solid #ddd;
     font-weight: bold;
     font-family: Font-90-Icons;
     color: white;
@@ -327,7 +327,7 @@ a:link, a:visited, a:hover, a:active {
     padding-top: 22px;
     line-height: 1;
     margin: 10px;
-    border: 2px solid white;
+    border: 2px solid #ddd;
     font-weight: bold;
     color: white;
     background-color: #333;
@@ -729,7 +729,7 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .progressBarTable{
-    border: 1px solid white;
+    border: 1px solid #ddd;
     border-spacing: 1px;
 }
 
@@ -743,7 +743,7 @@ a:link, a:visited, a:hover, a:active {
 }
 
 #studentMenuTable, #studentMenuTable td, .asmvInfoTable, .asmvInfoTable th, .asmvInfoTable td, #rankChartTable, #rankChartTable th, #rankChartTable td, #attStatsTable, #attStatsTable th, #attStatsTable td, #attListTable, #attListTable td, #studentAttTable, #studentAttTable td {
-    border: 1px solid white;
+    border: 1px solid #ddd;
     border-collapse: collapse;
     background-color: black;
 }
